{
    "name": "ActionMap",
    "maps": [
        {
            "name": "Player",
            "id": "f0fa2eee-ec53-4c3e-a073-6159b40da527",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e3643904-660d-410c-9cc1-5a874243f567",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0313c4f6-16ad-413a-9cdd-ac65375fb3d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "279f8224-2e3c-4002-88f7-9c1216ff7a26",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "95b09dd7-a8b2-4d27-9a69-2f9f31b81ca5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9b8a7aae-3b06-40c5-beba-3d27180e90a4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "59b13c40-2d77-4694-a643-726dd5c40df4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e6298e25-776c-418f-9679-0f0985e3e2c6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6b4be102-c3fb-41c3-bdae-a9e9c53db073",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pet",
            "id": "0e609eb3-277e-451e-81f3-e7fc987da776",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "0601c64d-c402-43b9-b01e-650cfae0b46b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8cf8476-9a69-40bb-ae17-0dabf3e981e5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "c3498250-aaba-4f67-876e-24f39524bb94",
            "actions": [
                {
                    "name": "TEST2",
                    "type": "Button",
                    "id": "b41bdac3-9457-4bd9-8350-8987aeccb966",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70aa178e-8cbe-4d81-8859-ab41030afcfc",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TEST2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Common",
            "id": "17520521-73a9-45f1-8bec-5e253016f724",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "6454632d-094e-4521-bfdb-9376e97ddac9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "1c51dc8c-b725-443a-b8e9-694ed1851956",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b24f529-2e3c-4c45-82b3-53792851b02a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "355f265a-34b8-4d9d-9258-da62a5267db6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Moblie",
            "bindingGroup": "Moblie",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}